# schematic-ripper

./: .gitignore  README.md  pyproject.toml
data/references/: bassman_6g6b.yaml  bassman_6g6c.yaml  date_codes.yaml
docs/: ARCHITECTURE.md  MODELS.md  PROVENANCE.md
sample_schematics/: README.md
source_images/: README.md
src/schematic_ripper/: __init__.py  cli.py  config.py  ingest.py  models.py  pipeline.py  values.py
src/schematic_ripper/generate/: __init__.py  layout.py  schematic.py
src/schematic_ripper/matching/: __init__.py  discriminators.py  graph_match.py  provenance.py
src/schematic_ripper/reference/: __init__.py  knowledge_base.py  loader.py
src/schematic_ripper/report/: __init__.py  dossier.py
src/schematic_ripper/vision/: __init__.py  claude_extractor.py  enhance.py  ocr.py  prompts.py
tests/: test_discriminators.py  test_enhance.py  test_models.py  test_values.py
tests/fixtures/: sample_bom.json  sample_bom_with_codes.json
