[project]
name = "schematic-ripper"
version = "0.1.0"
description = "Reverse-engineer a tube amplifier from photographs, establish its provenance against a library of known circuits, and generate a clean matching schematic."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Elemental Collision" }]
keywords = ["amplifier", "schematic", "provenance", "fender", "bassman", "reverse-engineering", "eda"]

# Core deps only — keep a v1 install minimal. Heavier capabilities live in
# optional groups so the base pipeline (ingest -> vision -> match -> report)
# installs with no system dependencies beyond Tesseract (already on PATH).
dependencies = [
    "anthropic>=0.111",   # Claude multimodal extraction (primary vision engine)
    "pydantic>=2.10",     # the shared data spine (models.py)
    "pyyaml>=6.0",        # reference fixtures
    "typer>=0.15",        # CLI
    "rich>=13.0",         # console output
    "pillow>=11.0",       # image load / EXIF / orient-normalize
]

[project.optional-dependencies]
# Label region crop + deskew before sending to Claude. Tesseract binary is a
# system dep (present: tesseract 5.5.2).
vision = ["pytesseract>=0.3.13", "opencv-python-headless>=4.10", "numpy>=2.0"]
# schemdraw is pure-Python and renders clean SVG/PNG schematics with zero
# system deps. This is the v1 generation toolchain.
eda = ["schemdraw>=0.19", "matplotlib>=3.9"]
# v2: topology confirmation via VF2 subgraph isomorphism. Lazy-imported.
graph = ["networkx>=3.4"]
# v3: SPICE verification. Requires libngspice (NOT installed; `brew install ngspice`).
sim = ["PySpice>=1.5"]
# v3: trained component detector. Heavy.
ml = ["ultralytics>=8.3"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
sripper = "schematic_ripper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schematic_ripper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
